[package]
name = "appstore_pricing"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow        = "1.0"
colored       = "2.2"
dialoguer     = "0.10"
html-escape   = "0.2"
regex         = "1.11"
reqwest       = { version = "0.11", features = ["json"] }
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
tokio         = { version = "1", features = ["full"] }
